[package]
name = "grav_rogue"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
crossbeam = "0.8.4"
glam = "0.30.4"
image = "0.25.6"
imgui = "0.12.0"
noise = "0.9.0"
once_cell = "1.21.3"
rand = "0.9.2"
raylib = "5.5.1"
raylib_imgui_rs = "0.4.0"
rayon = "1.10.0"
shipyard = {version = "0.8.1", features = ["parallel"]}

[profile.release]
codegen-units = 1
lto = "fat"
